--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,7 @@ iron = "0.3.0"
 lazy_static = "0.2.1"
 router = "0.1.1"
 rustc-serialize = "*"
+serde = "*"
 serde_json = "0.7.0"
+serde_macros = "*"
+argparse = "*"
