Update dependency versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ name = "force-alias-client"
 path = "src/client.rs"
 
 [dependencies]
-bodyparser = "*"
-hyper = "0.9.4"
-iron = "0.3.0"
+bodyparser = "0.4.0"
+hyper = "0.9.10"
+iron = "0.4.0"
 lazy_static = "0.2.1"
-router = "0.1.1"
+router = "0.2.0"
 rustc-serialize = "*"
 serde = "*"
-serde_json = "0.7.0"
+serde_json = "*"
 serde_macros = "*"
 argparse = "*"
